--- a/bin/ASP_Tutorial.dll.config
+++ b/bin/ASP_Tutorial.dll.config
@@ -20,9 +20,10 @@
 	</appSettings>
 
 	<connectionStrings>
-	  <!--<add name="dbcs" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Web_Projects\ASP_Tutorial\App_Data\LoginDatabase.mdf;Integrated Security=True"
-	   providerName="System.Data.SqlClient" />-->
-	  <add name="aspcoursecs" connectionString="Data Source=.\chetan;Initial Catalog=aspcourse;Persist Security Info=True;User ID=sa;Password=haobijam;Encrypt=False"
-	   providerName="Microsoft.Data.SqlClient" />
+		<!--<add name="dbcs" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Web_Projects\ASP_Tutorial\App_Data\LoginDatabase.mdf;Integrated Security=True"
+		providerName="System.Data.SqlClient" />-->
+		<!--<add name="aspcoursecs" connectionString="Data Source=.\chetan;Initial Catalog=aspcourse;Persist Security Info=True;User ID=sa;Password=haobijam;Encrypt=False"
+		providerName="Microsoft.Data.SqlClient" />-->
+		<add name="aspcoursecs" connectionString="Data Source=.\sqlexpress;Initial Catalog=aspcourse;User ID=sa;Password=haobijam;TrustServerCertificate=True" providerName="Microsoft.Data.SqlClient"/>
  </connectionStrings>
 </configuration>
